new proj to mvc

--- a/deliverysignalr/Views/Home/Index.cshtml
+++ b/deliverysignalr/Views/Home/Index.cshtml
@@ -1,8 +1,5 @@
-@page
-@model IndexModel
-
-@{
-    ViewData["Title"] = "Home";
+﻿@{
+    ViewData["Title"] = "Home Page";
 }
 
 <div class="form-group row">
@@ -22,14 +19,14 @@
 <button id="send" type="button" class="btn btn-primary">Send Message</button>
 
 
-<form action="">
+<form action="dlgsubmit">
     <div class="form-group row">
         <label for="Restaurant" class="col-2 col-form-label">RestaurantName</label>
         <div class="col col-sm-6">
-            <input id="Restaurant" class="form-control" />
+            <input id="Restaurantname" name="Restaurantname" class="form-control" />
         </div>
     </div>
-    <button id="senddatatodb" type="button" class="btn btn-primary" action="OnPostSubmit">Submit Data To DB</button>
+    <button id="senddatatodb" class="btn btn-primary" >Submit Data To DB</button>
 </form>
 <p>Time: @ViewData["Timestamp"]</p>
 <hr>
@@ -38,8 +35,8 @@
 
 @section Scripts
     {
-    <!-- <snippet_CDN> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
-    <!-- </snippet_CDN> -->
-    <script src="~/chat.js"></script>
+        <!-- <snippet_CDN> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
+        <!-- </snippet_CDN> -->
+        <script src="~/chat.js"></script>
 }
