--- a/deliverysignalr/Views/Home/Index.cshtml
+++ b/deliverysignalr/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@*<form action="dlgsubmit">*@
 
 <div class="form-group row">
     <label for="userInput" class="col-2 col-form-label">User</label>
@@ -15,28 +16,23 @@
         <input id="messageInput" class="form-control" />
     </div>
 </div>
-<p id="demo"></p>
 <button id="send" type="button" class="btn btn-primary">Send Message</button>
 
-
-<form action="dlgsubmit">
-    <div class="form-group row">
-        <label for="Restaurant" class="col-2 col-form-label">RestaurantName</label>
-        <div class="col col-sm-6">
-            <input id="Restaurantname" name="Restaurantname" class="form-control" />
-        </div>
+<div class="form-group row">
+    <label for="Restaurant" class="col-2 col-form-label">RestaurantName</label>
+    <div class="col col-sm-6">
+        <input id="restaurantName" name="restaurantName" class="form-control" />
     </div>
-    <button id="senddatatodb" class="btn btn-primary" >Submit Data To DB</button>
-</form>
-<p>Time: @ViewData["Timestamp"]</p>
+</div>
+<button id="senddatatodb" class="btn btn-primary">Submit Data To DB</button>
 <hr>
+<li id="messageList"></li>
 
-<p id="messageList"></p>
 
 @section Scripts
     {
-        <!-- <snippet_CDN> -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
-        <!-- </snippet_CDN> -->
-        <script src="~/chat.js"></script>
+    <!-- <snippet_CDN> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
+    <!-- </snippet_CDN> -->
+    <script src="~/chat.js"></script>
 }
