--- a/deliverysignalr/Views/Home/Index.cshtml
+++ b/deliverysignalr/Views/Home/Index.cshtml
@@ -1,30 +1,29 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-@*<form action="dlgsubmit">*@
 
 <div class="form-group row">
-    <label for="userInput" class="col-2 col-form-label">User</label>
+    <label for="userInput" class="col-3 col-form-label">User</label>
     <div class="col col-sm-6">
         <input id="userInput" class="form-control" />
     </div>
 </div>
 
-<div class="form-group row">
-    <label for="message" class="col-2 col-form-label">Message</label>
-    <div class="col col-sm-6">
+<div class="form-group row padding">
+    <label for="message" class="col-3 col-form-label">Message</label>
+    <div class="col col-sm-5">
         <input id="messageInput" class="form-control" />
     </div>
 </div>
-<button id="send" type="button" class="btn btn-primary">Send Message</button>
-
+<button id="send" type="button" class="btn btn-primary">ทดสอบข้อความ</button>
+<hr>
 <div class="form-group row">
-    <label for="Restaurant" class="col-2 col-form-label">RestaurantName</label>
-    <div class="col col-sm-6">
+    <label for="Restaurant" class="col-3 col-form-label">RestaurantName</label>
+    <div class="col col-sm-8">
         <input id="restaurantName" name="restaurantName" class="form-control" />
     </div>
 </div>
-<button id="senddatatodb" class="btn btn-primary">Submit Data To DB</button>
+<button id="senddatatodb" class="btn btn-success">Submit</button>
 <hr>
 <li id="messageList"></li>
 
